# altruist-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flash.sh  flash_and_monitor.sh  log.sh  look  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/sensors/: bme280.rs  manager.rs  me2co.rs  mod.rs  sds011.rs
